--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
-    "bignumber.js": "^7.2.1",
     "commander": "^2.15.0",
     "ieee754": "^1.1.8",
+    "jsbi": "^2.0.5",
     "json-text-sequence": "^0.1"
   },
   "engines": {
